@@ -1,5 +1,5 @@
 /*
- * NextFractal 2.0.3
+ * NextFractal 2.1.0
  * https://github.com/nextbreakpoint/nextfractal
  *
  * Copyright 2015-2018 Andrea Medeghini
@@ -24,10 +24,10 @@
  */
 package com.nextbreakpoint.nextfractal.mandelbrot.compiler.java;
 
-import com.nextbreakpoint.nextfractal.core.Error;
+import com.nextbreakpoint.nextfractal.core.common.SourceError;
 import com.nextbreakpoint.nextfractal.mandelbrot.compiler.CompilerBuilder;
-import com.nextbreakpoint.nextfractal.mandelbrot.compiler.CompilerError;
 import com.nextbreakpoint.nextfractal.mandelbrot.compiler.CompilerReport;
+import com.nextbreakpoint.nextfractal.mandelbrot.compiler.CompilerSourceError;
 import com.nextbreakpoint.nextfractal.mandelbrot.core.Color;
 import com.nextbreakpoint.nextfractal.mandelbrot.core.Orbit;
 
@@ -53,35 +53,37 @@ public class JavaClassCompiler {
 	private static final Logger logger = Logger.getLogger(JavaClassCompiler.class.getName());
 
 	public CompilerBuilder<Orbit> compileOrbit(CompilerReport report) throws ClassNotFoundException, IOException {
-		List<Error> errors = new ArrayList<>();
+		List<SourceError> errors = new ArrayList<>();
 		try {
 			Class<Orbit> clazz = compileToClass(report.getOrbitSource(), report.getPackageName(), report.getClassName() + "Orbit", Orbit.class, errors);
 			return new JavaClassBuilder<Orbit>(clazz, errors);
 		} catch (Throwable e) {
-			errors.add(new CompilerError(Error.ErrorType.JAVA_COMPILER, 0, 0, 0, 0, e.getMessage()));
+			errors.add(new CompilerSourceError(SourceError.ErrorType.JAVA_COMPILER, 0, 0, 0, 0, e.getMessage()));
 			return new JavaClassBuilder<Orbit>(null, errors);
 		}
 	}
 
 	public CompilerBuilder<Color> compileColor(CompilerReport report) throws ClassNotFoundException, IOException {
-		List<Error> errors = new ArrayList<>();
+		List<SourceError> errors = new ArrayList<>();
 		try {
 			Class<Color> clazz = compileToClass(report.getColorSource(), report.getPackageName(), report.getClassName() + "Color", Color.class, errors);
 			return new JavaClassBuilder<Color>(clazz, errors);
 		} catch (Throwable e) {
-			errors.add(new CompilerError(Error.ErrorType.JAVA_COMPILER, 0, 0, 0, 0, e.getMessage()));
+			errors.add(new CompilerSourceError(SourceError.ErrorType.JAVA_COMPILER, 0, 0, 0, 0, e.getMessage()));
 			return new JavaClassBuilder<Color>(null, errors);
 		}
 	}
 	
 	@SuppressWarnings("unchecked")
-	private <T> Class<T> compileToClass(String source, String packageName, String className, Class<T> clazz, List<Error> errors) throws IOException, ClassNotFoundException {
+	private <T> Class<T> compileToClass(String source, String packageName, String className, Class<T> clazz, List<SourceError> errors) throws IOException, ClassNotFoundException {
 		logger.log(Level.FINE, "Compile Java source:\n" + source);
 		List<SimpleJavaFileObject> compilationUnits = new ArrayList<>();
 		compilationUnits.add(new JavaSourceFileObject(className, source));
+		System.getProperties();
 		List<String> options = new ArrayList<>();
 //		options.addAll(Arrays.asList("-source", "1.8", "-target", "1.8", "-proc:none", "-Xdiags:verbose"));
-		options.addAll(Arrays.asList("-source", "1.8", "-target", "1.8", "-proc:none", "-Xdiags:verbose", "-classpath", System.getProperty("java.class.path")));
+		options.addAll(Arrays.asList("-source", "11", "-target", "11", "-proc:none", "-Xdiags:verbose", "--module-path", System.getProperty("jdk.module.path"), "--add-modules", "ALL-MODULE-PATH"));
+//		options.addAll(Arrays.asList("-source", "11", "-target", "11", "-proc:none", "-Xdiags:verbose"));
 //		options.addAll(Arrays.asList("-proc:none", "-Xdiags:verbose", "-classpath", System.getProperty("java.class.path")));
 //		options.addAll(Arrays.asList("-classpath", System.getProperty("java.class.path")));
 		DiagnosticCollector<JavaFileObject> diagnostics = new DiagnosticCollector<>();
@@ -102,18 +104,18 @@ public class JavaClassCompiler {
 				for (Diagnostic<? extends JavaFileObject> diagnostic : diagnostics.getDiagnostics()) {
 					if (diagnostic.getCode().equals("compiler.err.cant.access")) {
 						// TODO Not sure why it doesn't happen with Java 8, but only with Java 9.
-						CompilerError error = new CompilerError(CompilerError.ErrorType.JAVA_COMPILER, diagnostic.getLineNumber(), diagnostic.getColumnNumber(), diagnostic.getStartPosition(), diagnostic.getEndPosition() - diagnostic.getStartPosition(), diagnostic.getMessage(null));
+						CompilerSourceError error = new CompilerSourceError(CompilerSourceError.ErrorType.JAVA_COMPILER, diagnostic.getLineNumber(), diagnostic.getColumnNumber(), diagnostic.getStartPosition(), diagnostic.getEndPosition() - diagnostic.getStartPosition(), diagnostic.getMessage(null));
 						logger.log(Level.WARNING, error.toString());
 						errors.add(error);
 					} else {
-						CompilerError error = new CompilerError(CompilerError.ErrorType.JAVA_COMPILER, diagnostic.getLineNumber(), diagnostic.getColumnNumber(), diagnostic.getStartPosition(), diagnostic.getEndPosition() - diagnostic.getStartPosition(), diagnostic.getMessage(null));
+						CompilerSourceError error = new CompilerSourceError(CompilerSourceError.ErrorType.JAVA_COMPILER, diagnostic.getLineNumber(), diagnostic.getColumnNumber(), diagnostic.getStartPosition(), diagnostic.getEndPosition() - diagnostic.getStartPosition(), diagnostic.getMessage(null));
 						logger.log(Level.FINE, error.toString());
 						errors.add(error);
 					}
 				}
 			}
 		} catch (Exception e) {
-			CompilerError error = new CompilerError(CompilerError.ErrorType.JAVA_COMPILER, 0, 0, 0, 0, e.getMessage());
+			CompilerSourceError error = new CompilerSourceError(CompilerSourceError.ErrorType.JAVA_COMPILER, 0, 0, 0, 0, e.getMessage());
 			logger.log(Level.SEVERE, e.getMessage());
 			errors.add(error);
 			e.printStackTrace();
